5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1831_3184.log
== TEST (2019-06-13 16:15:43) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: "))

print(alf[0])				
-- ERROR:
File "XXXX", line 4
    print(alf[0])				
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:16:11) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

print(alf[0])				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:16:22) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

print(alf[0])				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:16:57) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

print(alf)				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:17:17) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

print(alf[3])				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:17:26) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

print(alf[3])				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:25:01) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)

for i in range(n//2):
	aux1 = alf[i]
	alf[i] = alf[n-i]
	alf[n-1] = auxi1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:26:46) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)

for i in range(n//2):
	aux1 = alf[i]
	alf[i] = alf[n-i]
	alf[n-i] = auxi1

print(alf)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:27:14) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)

for i in range(n//2):
	aux1 = alf[i]
	alf[i] = alf[n-1]
	alf[n-1] = auxi1

print(alf)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:30:08) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)

aux1 = []
for i in range(n//2):
	aux1 = alf[i]
	alf[i] = alf[n-1]
	alf[n-1] = auxi1

print(alf)	


while(i<n):
	
-- ERROR:
File "XXXX", line 17
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:30:29) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)

aux1 = []
for i in range(n//2):
	aux1 = alf[i]
	alf[i] = alf[n-1]
	alf[n-1] = auxi1

print(alf)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:31:11) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)

aux = array([])
for i in range(n//2):
	aux = alf[i]
	alf[i] = alf[n-1]
	alf[n-1] = auxi

print(alf)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:31:25) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)

aux = array([])
for i in range(n//2):
	aux = alf[i]
	alf[i] = alf[n-1]
	alf[n-1] = aux

print(alf)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:33:00) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)

aux = array([])
for i in range(n//2):
	aux = alf[i]
	alf[i] = alf[n-i]
	alf[n-i] = aux

print(alf)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:50) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)
print(n)
aux = array([])
for i in range(size(n//2)):
	aux = alf[i]
	alf[i] = alf[n-1]
	alf[n-1] = aux

print(alf)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:35:46) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)
print(n)
aux = array([])
for i in range(size(n//2)):
	aux = alf[i]
	alf[i] = alf[n-1]
	alf[n-1] = aux
	print(aux)
	
print(alf)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:36:34) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)
print(n)
aux = array([])
for i in range(size(n//2)):
	aux = alf[i]
	alf[i] = alf[n-i]
	alf[n-i] = aux
	print(aux)
	
print(alf)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:35) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)
print(n)
aux = array([])
for i in range(size(n//2)):
	aux = alf[i]
	alf[i] = alf[n-1]
	alf[n-1] = aux
	print(aux)
	
print(alf)	
i=-1
while(i > -n)
	alf[i] = alf
-- ERROR:
File "XXXX", line 15
    while(i > -n)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:56) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)
print(n)
aux = array([])
for i in range(size(n//2)):
	aux = alf[i]
	alf[i] = alf[n-1]
	alf[n-1] = aux
print(alf)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:42:54) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)
print(n)
aux = array([])
for i in range(size(n//2)):
	aux = alf[i]
	alf[i] = alf[-1]
	alf[-1] = aux
print(alf)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:45:01) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)
print(n)
aux = array([])
for i in range(size(n//2)):
	aux = alf[i]
	alf[i] = alf[n-i]
	alf[n-i] = aux
print(alf)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:45:36) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)
print(n)
aux = array([])
for i in range(size(n//2)):
	aux = alf[i]
	alf[i] = alf[-1]
	alf[-1] = aux
print(alf)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:47:24) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)
print(n)
aux = array([])
for i in range(size(n//2)):
	aux = alf[i]
	alf[i] = alf[n-i-1]
	alf[n-i-1] = aux
print(alf)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:48:10) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)
print(n)
aux = array([])
i = 0
for i in range(size(n//2)):
	aux = alf[i]
	alf[i] = alf[n-i-1]
	alf[n-i-1] = aux
	i = i+1
print(alf)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:48:40) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)
print(n)
aux = array([])
i = 0
for i in range(size(n//2)):
	aux = alf[i]
	alf[i] = alf[n-i-1]
	alf[n-i-1] = aux
	i = i+1
print(alf)
	
-- EXECUTION TIME:
0.801566
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:
7
['a' 'p' 'm' 'k' 'e' 'c' 'x']
-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:
7
['a' 'e' 'e' 'd' 'c' 'b' 'f']
-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:
6
['b' 'l' 'k' 'i' 'e' 'n']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:48:45) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)
print(n)
aux = array([])
i = 0
for i in range(size(n//2)):
	aux = alf[i]
	alf[i] = alf[n-i-1]
	alf[n-i-1] = aux
	i = i+1
print(alf)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:49:35) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)
print(n)
aux = array([])
i = 0
for i in range(size(n//2)):
	aux = alf[i]
	alf[i] = alf[(n-i)-1]
	alf[(n-i)-1] = aux
	i = i+1
print(alf)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:01) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)
print(n)
aux = array([])
i = 0
for i in range(size(n//2)):
	aux = alf[i]
	alf[i] = alf[(n-i)-1]
	alf[(n-i)-1] = aux
	i = i+1
print(alf)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:43) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)
print(n)
aux = array([])
i = 0
for i in range(size(n)):
	aux = alf[i]
	alf[i] = alf[(n-i)-1]
	alf[(n-i)-1] = aux
	i = i+1
print(alf)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:54:35) 
-- CODE:
from numpy import *
alf = array(eval(input("Digite as letras do alfabeto: ")))

n= size(alf)
print(n)
aux = array([])
i = 0
for i in range(size(n//2)):
	aux = alf[i]
	alf[i] = alf[(n-i)-1]
	alf[(n-i)-1] = aux
	i = i-1
print(alf)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
